Fix spacing and timing

--- a/web/style.css
+++ b/web/style.css
@@ -211,12 +211,12 @@
 }
 */
 .twtweet {
-	font-size: 1.35em;
+	font-size: 1.45em;
 }
 
 .twimage {
 	display: inline-block;
-	font-size: 1.35em;
+	font-size: 1.15em;
 	line-height: 1.15
 }
 
